# watney_ws

./: README.md
scripts/: dom.py  state_machine.py
src/battery_system/: CMakeLists.txt  package.xml
src/battery_system/scripts/: INA219.py
src/cam_tools/: CMakeLists.txt  package.xml
src/camera_tools/: CMakeLists.txt  package.xml  setup.py
src/camera_tools/launch/: vision.xml
src/camera_tools/scripts/: Aruco_PID.py  apply_color_transform.py  aruco_tracking.py  brightness_crawler.py  capture_image_manual.py  clarity_crawl.py  clarity_service.py  color_calibrate.py  color_crawler.py  data_analysis_color_tool.py  hdr_photo.py  image_top_level.py  take_and_store_picture.py  take_picture_server.py
src/camera_tools/src/: aruco_tracking.py  brightness_assessment.py  change_exposure_server.cpp  hdr_photo.cpp  plant_identifier.py  take_picture_client.cpp  take_picture_server.cpp
src/camera_tools/srv/: ChangeExposure.srv
src/camera_tools_interfaces/: CMakeLists.txt  package.xml
src/camera_tools_interfaces/srv/: CalcClarity.srv  HDRService.srv  TakePicture.srv  VisionSystemCall.srv
src/cpp_srvcli/: CMakeLists.txt  package.xml
src/cpp_srvcli/src/: add_two_ints_client.cpp  add_two_ints_server.cpp
src/high_to_low/: package.xml  setup.cfg  setup.py
src/high_to_low/high_to_low/: high_to_low_node.py  serial_json.py
src/plant_cv/: CMakeLists.txt  package.xml
src/plant_cv/launch/: GStreamerServerLaunch.py
src/plant_cv/scripts/: data_collector.py  image_clarity_analyzer.py  image_clarity_local_test.py
src/plant_cv/src/: arducam_driver.cpp  c2_cam_viewer.cpp
src/stepper_driver/: CMakeLists.txt  package.xml
src/stepper_driver/scripts/: stepper_driver_node.py
src/stepper_driver/src/: deploy_camera_node.cpp
src/tutorial_interfaces/: CMakeLists.txt  package.xml
src/ugv_client_drivers/: CMakeLists.txt  package.xml
src/ugv_client_drivers/scripts/: GStream2ROS.py  receiver.py  receiver2.py  receiver3.py
src/ugv_description/launch/: display.launch.py
src/ugv_description/urdf/: ugv_rover.urdf
src/ugv_drivers/: CMakeLists.txt  package.xml
src/ugv_drivers/launch/: GStreamerServer.launch.py  ugv_vision.xml
src/ugv_drivers/scripts/: GStreamerDev.py  UGVDriver.py  sender.py
src/watney_bringup/: package.xml  setup.cfg  setup.py
src/watney_bringup/config/: ekf.yaml
src/watney_bringup/launch/: display.launch.py  gary.launch.py  gary_bringup.launch.py  gary_nav2.launch.py  gary_slam.launch.py  ground.launch.py  ldlidar.launch.py  ldlidar_agent.launch.py  ldlidar_bringup.launch.py  ldlidar_common.launch.py  ldlidar_control_station.launch.py  ldlidar_slam.launch.py  mark_bringup.launch.py  sensors.launch.py
src/watney_bringup/params/: ekf.yaml  madgwick.yaml  nav2_gary_params.yaml  slam_toolbox.yaml
src/watney_bringup/rviz/: ldlidar_slam.rviz  nav2_view.rviz  view_description.rviz
src/watney_bringup/urdf/: gary.urdf.xml  ldlidar_descr.urdf.xml
src/watney_sensors/: CMakeLists.txt  package.xml
src/watney_sensors/src/: h2l_node.cpp
src/watney_tests/: CMakeLists.txt  package.xml
src/watney_tests/scripts/: odom_test.py
