<?xml version="1.0"?>
<package format="3">
  <name>watney_sensors</name>
  <version>0.0.0</version>
  <description>Package for interfacing with sensors via serial communication using ROS 2.</description>
  <maintainer email="62108812+jake161@users.noreply.github.com">jake_161</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nlohmann_json</depend>
  <!-- Uncomment the following if serialib becomes available as a ROS package -->
  <!-- <depend>serialib</depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
